--- a/index.HTML
+++ b/index.HTML
@@ -95,8 +95,16 @@
             <div class="footer_img_bg">
                 <img src="img/footer_img_bg.png" alt="">
             </div>
-
+            
         </div>
+        
     </footer>
+    <p>
+        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:88px;height:31px;"
+                src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                alt="Правильный CSS!" />
+            </a>
+    </p>
 </body>
 </html>
