--- a/index.HTML
+++ b/index.HTML
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>NIS</title>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer">
       <link rel="stylesheet" href="style.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,9 +23,9 @@
          <div class="menu">
             <h1>
                Подготовим вашего ребёнка <br>
-               к поступлению в НИШ
-               <p>обучая 180 минут в <br> день, 3 раза в <br> неделю </p>
-            </h1>
+               к поступлению в НИШ </h1>
+               <p class="menu_p">обучая 180 минут в <br> день, 3 раза в <br> неделю </p>
+            
             <img class="img_menu" src="img/menu_img.png" alt="children">
             <img class="menu_bg_img" src="img/bg_img.svg" alt="bg" > 
          </div>
@@ -94,7 +94,7 @@
          <a href="http://jigsaw.w3.org/css-validator/check/referer">
          <img style="border:0;width:88px;height:31px;"
             src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-            alt="Правильный CSS!" />
+            alt="Правильный CSS!">
          </a>
       </p>
    </body>
