--- a/index.HTML
+++ b/index.HTML
@@ -21,10 +21,9 @@
             <a class="nav_item" href="#">Основатели AiPLUS</a>
          </div>
          <div class="menu">
-            <h1>
-               Подготовим вашего ребёнка <br>
+            <h1>Подготовим вашего ребёнка <br>
                к поступлению в НИШ </h1>
-               <p class="menu_p">обучая 180 минут в <br> день, 3 раза в <br> неделю </p>
+            <p class="menu_p">обучая 180 минут в <br> день, 3 раза в <br> неделю </p>
             
             <img class="img_menu" src="img/menu_img.png" alt="children">
             <img class="menu_bg_img" src="img/bg_img.svg" alt="bg" > 
@@ -42,9 +41,10 @@
                <div class="main_card">НИШ за свой счет проводит международные экзамены для поступления в зарубежные ВУЗы</div>
             </div>
             <img class="main_img" src="img/girl.png" alt="girl">
-            <img src="img/Vector.png" alt="bg" class="img_bg">
+            <img src="img/Vector.png" alt="bg" class="main_bg_img">
          </div>
       </section>
+
       <section class="container">
          <div class="contact_us">
             <div>
@@ -58,12 +58,10 @@
             </div>
             <div>
                <img class="contact_img" src="img/contactUs_img.png" alt="contactUs_img">
-               <div class="contact_img_bg">
-                  <img src="img/contact_img_bg.png" alt="">
-               </div>
             </div>
          </div>
       </section>
+
       <footer class="container">
          <div class="footer_wrap">
             <div class="w-50">
@@ -85,9 +83,7 @@
                   <a class="confed" href="#">Политика конфиденциальности</a> 
                </p>
             </div>
-            <div class="footer_img_bg">
-               <img src="img/footer_img_bg.png" alt="">
-            </div>
+           
          </div>
       </footer>
       <p>
