--- a/index.HTML
+++ b/index.HTML
@@ -19,7 +19,9 @@
             <a class="nav_item" href="#">Результаты учеников</a>
             <a class="nav_item" href="#">Отзывы родителей</a>
             <a class="nav_item" href="#">Основатели AiPLUS</a>
+            <i class="fa-solid fa-bars"></i>
          </div>
+         
          <div class="menu">
             <h1>Подготовим вашего ребёнка <br>
                к поступлению в НИШ </h1>
